SERVER-23852 validate() should log errors to server logs instead of returning them to the client